--- a/README
+++ b/README
@@ -2,11 +2,11 @@
 
 All documentation for the Dir Plugin is available online at:
 
-  * http://wiki.splitbrain.org/plugin:dir
+  * http://www.dokuwiki.org/plugin:dir
 
 This plugin requires DokuWiki 2007-06-26 or later.
 
 There's a Google Groups mailing list to discuss all issues:
-http://groups.google.com/group/dokuwiki-plugin-dir
+http://groups.google.com/group/dokuwiki-plugin-dir (outdated)
 
 GPL 2 License
